# BVH

./: .gitignore  .gitmodules  .vscode  CMakeLists.txt  README.md
include/: nearest_neighbor_brute_force.h
src/: AABBTree.cpp  AABBTree_ray_intersect.cpp  box_box_intersect.cpp  find_all_intersecting_pairs_using_AABBTrees.cpp  insert_box_into_box.cpp  insert_triangle_into_box.cpp  nearest_neighbor_brute_force.cpp  point_AABBTree_squared_distance.cpp  point_box_squared_distance.cpp  ray_intersect_box.cpp  ray_intersect_triangle.cpp  ray_intersect_triangle_mesh_brute_force.cpp  triangle_triangle_intersection.cpp
